cabal-version:      3.4
name:               datepicker
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Sören Tempel
maintainer:         soeren+git@soeren-tempel.net
-- copyright:
category:           System
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable datepicker
    import:           warnings
    ghc-options:      -threaded
    main-is:          Main.hs
    other-modules:    UI.Month
                    , UI.Time
                    , UI
                    , Util
                    , CmdLine
    build-depends:    base >=4.16.0.0
                    , time >=1.12.2
                    , unix
                    , vty  >=6.2
                    , vty-unix
                    , optparse-applicative >=0.17.0.0
    hs-source-dirs:   app
    default-language: GHC2021
