cabal-version:      3.4
name:               datepicker
version:            0.1.0
synopsis:           An fzf-like tool to interactively select a date in a provided format
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Sören Tempel
maintainer:         soeren+git@soeren-tempel.net
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable datepicker
    import:           warnings
    ghc-options:      -threaded
    main-is:          Main.hs
    other-modules:    UI.Month
                    , UI.Time
                    , UI
                    , Util
                    , CmdLine
    build-depends:    base >=4.16.0.0
                    , time >=1.12.2
                    , unix
                    , vty  >=6.2
                    , vty-unix
                    , optparse-applicative >=0.17.0.0
    hs-source-dirs:   app
    default-language: GHC2021

test-suite datepicker-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Tmux
    build-depends:
        base,
        mtl,
        bytestring,
        process,
        tasty        >=1.4.3,
        tasty-golden >=2.3.5,
        tasty-hunit  >=0.10,
        tasty-tmux   >=0.1.0.5,
