cabal-version:      3.4
name:               datepicker
version:            0.1.0
synopsis:           An fzf-like tool to interactively select a date in a provided format
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Sören Tempel
maintainer:         soeren+git@soeren-tempel.net
category:           System
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    ghc-options:      -threaded
    exposed-modules:  DatePicker.UI
                    , DatePicker.UI.Month
                    , DatePicker.UI.Time
                    , DatePicker.CmdLine
                    , DatePicker.Util
    build-depends:    base >=4.16.0.0
                    , time >=1.12.2
                    , vty  >=6.2
                    , optparse-applicative >=0.17.0.0
    hs-source-dirs:   lib
    default-language: GHC2021

executable datepicker
    import:           warnings
    ghc-options:      -threaded
    main-is:          Main.hs
    build-depends:    base
                    , datepicker
                    , time
                    , vty
                    , vty-unix
                    , unix
    hs-source-dirs:   app
    default-language: GHC2021

test-suite datepicker-test
    import:           warnings
    ghc-options:      -Wno-orphans
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Tmux
                    , Util
                    , QuickCheck
    build-depends:
        base,
        mtl,
        bytestring,
        datepicker,
        time,
        tasty,
        tasty-hunit      >=0.10,
        tasty-tmux       >=0.1.0.5,
        tasty-quickcheck >=0.11.1
